Phase 2: Backend Integration & Form Processing
✅ Implemented Features:
- Netlify serverless functions for form processing
- Professional email notifications with luxury branding
- Auto-reply system for customer confirmations
- Spam protection with honeypot fields and rate limiting
- Enhanced form validation and error handling
- Real-time notification system for user feedback
- Environment variables configuration for secure deployment

🔧 Technical Improvements:
- Contact form backend with VVIP concierge notifications
- Reservation form with priority processing for luxury items
- Email templates with black/gold luxury branding
- CORS support and security headers
- Error logging and graceful fallback handling
- Rate limiting to prevent form abuse

📧 Email Features:
- Instant notifications to concierge team
- Professional auto-replies to customers
- Priority flagging for reservations vs general inquiries
- Response time commitments (1-2 hours)
- Detailed item information in reservation emails

🛡️ Security & Validation:
- Server-side input validation
- Honeypot spam protection
- Rate limiting (3 submissions per 5 minutes)
- Environment variable security
- HTTPS enforcement

📚 Documentation:
- Complete deployment guide
- Environment variables setup
- Local development instructions
- Troubleshooting guide

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,19 @@
 [build]
-  # No build command needed for static HTML site
-  command = ""
+  # Install dependencies for Netlify functions
+  command = "npm install"
   # Publish the root directory
   publish = "."
   # Base directory (leave empty for root)
   base = ""
+  # Functions directory
+  functions = "netlify/functions"
 
 [build.environment]
-  # Node.js version (if needed for future enhancements)
+  # Node.js version for Netlify functions
   NODE_VERSION = "18"
+  # Email configuration (set these in Netlify dashboard)
+  EMAIL_USER = ""
+  EMAIL_PASS = ""
 
 # Redirect rules for SPA-like behavior
 [[redirects]]
