Brand Update: Rebrand from 'Midas Lifestyle' to 'Mida' and add US locations
✅ Brand Changes:
- Updated brand name from 'Midas Lifestyle' to 'Mida' across all files
- Changed email from concierge@midaslifestyle.com to concierge@mida.com
- Updated all HTML meta tags, titles, and content
- Modified backend email templates and notifications
- Updated package.json, README.md, and documentation

🌍 New Locations Added:
- Washington DC (cars, yachts, jets, properties)
- Maryland (cars, properties)
- Northern Virginia (cars, properties)
- Atlanta, GA (cars, yachts, jets, properties)
- Updated inventory availability for all US markets
- Enhanced location options in reservation forms

📧 Email & Backend Updates:
- All email templates now use 'Mida' branding
- Updated concierge email to concierge@mida.com
- Modified notification subjects and content
- Enhanced location-specific messaging

🔧 Technical Updates:
- Updated Netlify configuration for new domain
- Modified redirects for mida.netlify.app
- Updated package.json metadata
- Enhanced SEO with new location keywords

--- a/netlify.toml
+++ b/netlify.toml
@@ -95,5 +95,5 @@
   HUGO_VERSION = "0.58.2"
 
 # Custom domain settings (will be configured in Netlify dashboard)
-# Site name: midasthelifestyle
-# Custom domain: midasthelifestyle.netlify.app
+# Site name: mida
+# Custom domain: mida.netlify.app
