Brand Reversion & Advanced Features Implementation
🔄 BRAND REVERSION: Mida → Midas The Lifestyle
✅ Corrected brand name from 'Mida' back to 'Midas The Lifestyle' throughout entire codebase
✅ Updated email addresses from concierge@mida.com to concierge@midas.com
✅ Fixed copyright notices and documentation
✅ Updated package.json, README.md, and all configuration files
✅ Maintained all US location expansions (DC, MD, VA, GA)

🚗 NEW: Luxury Car Rentals Section
✅ Comprehensive car rental categories (Hypercars, Luxury Sedans, SUVs)
✅ Featured vehicles: Bugatti Chiron, Rolls-Royce Phantom, Cullinan
✅ Pricing display and booking integration
✅ White glove delivery and concierge services

🚛 NEW: Transportation Services
✅ Dubai chauffeur services with Mercedes S-Class and BMW 7 Series fleets
✅ Estate transportation for property viewings
✅ Airport transfer services across all locations
✅ Professional booking system with pricing calculator
✅ Multi-location coverage (Dubai, DC, Atlanta, MD, VA)

📱 NEW: WhatsApp Chatbot Integration
✅ Direct WhatsApp business chat button
✅ Pre-filled luxury service inquiry messages
✅ Mobile-optimized chat interface

🤖 NEW: AI Chatbot System
✅ Intelligent customer service assistant
✅ Comprehensive knowledge base for all luxury services
✅ Quick action buttons for common inquiries
✅ Escalation to human concierge when needed
✅ Real-time conversation handling

🔐 ENHANCED: Forgot Password System
✅ Complete password reset functionality
✅ Email verification system (simulated)
✅ Secure token generation and validation
✅ Professional reset flow with instructions
✅ Password strength validation

📱 UPDATED: Social Media Links
✅ Removed Facebook, added YouTube (@MidasLifestyle)
✅ Updated Instagram link (@midasthelifestyle)
✅ All links open in new tabs

🎨 ENHANCED: UI/UX Improvements
✅ Advanced modal systems for transportation booking
✅ Professional chatbot interface with luxury styling
✅ Mobile-responsive design for all new features
✅ Consistent black/gold luxury

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mida-website",
-  "version": "1.2.1",
-  "description": "Mida - Bespoke luxury rentals website with backend form processing",
+  "name": "midas-the-lifestyle-website",
+  "version": "2.0.1",
+  "description": "Midas The Lifestyle - Bespoke luxury rentals website with advanced business features",
   "main": "index.html",
   "scripts": {
     "dev": "netlify dev",
@@ -32,7 +32,7 @@
     "netlify",
     "serverless"
   ],
-  "author": "Mida",
+  "author": "Midas The Lifestyle",
   "license": "MIT",
   "repository": {
     "type": "git",
