feat: Implement critical backend infrastructure for production readiness
🚀 Payment Processing Endpoints Implementation:
- Added Stripe webhook handler with payment confirmations, failures, and refunds
- Implemented PayPal IPN handler for transaction verification and dispute management
- Created payment intent endpoint with dynamic luxury pricing and seasonal adjustments
- Added refund processing with luxury service policies and automated calculations
- Implemented comprehensive error handling and PCI compliance measures

📊 Error Logging and Monitoring System:
- Built centralized error logging service with business-specific categorization
- Added real-time alerting for critical errors (payment failures, booking conflicts)
- Implemented multi-service integration (Sentry, DataDog, LogRocket, Slack)
- Created business metrics tracking for booking/payment conversion rates
- Added performance monitoring with response time and memory usage tracking

📧 Enhanced Email Service with Failover:
- Configured primary email service (Gmail SMTP) with connection pooling
- Added secondary email service (SendGrid) and tertiary (Mailgun) for failover
- Implemented email queue system with exponential backoff retry logic
- Created luxury-branded email templates for all communication types
- Added email analytics tracking (delivery rates, bounces, opens)

🔧 Infrastructure Enhancements:
- Updated package.json with required dependencies (Stripe, Nodemailer)
- Enhanced .env.example with comprehensive environment variable configuration
- Added rate limiting (10 requests/minute) for payment endpoints
- Implemented input validation and sanitization for security
- Created comprehensive deployment guide and production checklist

💼 Business Logic Implementation:
- Dynamic pricing with location-based taxes and service tier multipliers
- Seasonal pricing adjustments (peak/high/standard/low periods)
- Insurance and security deposit calculations by item type
- Luxury service refund policies with time-b

--- a/.env.example
+++ b/.env.example
@@ -15,17 +15,51 @@ NETLIFY_ACCESS_TOKEN=your-access-token
 # Optional: Database Configuration (for future use)
 DATABASE_URL=your-database-connection-string
 
-# Optional: External API Keys (for future integrations)
+# Payment Processing - Stripe
 STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
 STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
+STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
+
+# Payment Processing - PayPal
+PAYPAL_CLIENT_ID=your-paypal-client-id
+PAYPAL_CLIENT_SECRET=your-paypal-client-secret
+
+# Authentication - Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Email Services - Backup Providers
+SENDGRID_API_KEY=your-sendgrid-api-key
+MAILGUN_SMTP_USER=your-mailgun-smtp-user
+MAILGUN_SMTP_PASS=your-mailgun-smtp-password
+
+# Monitoring and Error Tracking
+SENTRY_WEBHOOK_URL=https://your-sentry-webhook-url
+DATADOG_WEBHOOK_URL=https://your-datadog-webhook-url
+LOGROCKET_WEBHOOK_URL=https://your-logrocket-webhook-url
+MONITORING_WEBHOOK_URL=https://your-monitoring-webhook-url
+
+# API Keys for Monitoring Services
+SENTRY_API_KEY=your-sentry-api-key
+DATADOG_API_KEY=your-datadog-api-key
+LOGROCKET_API_KEY=your-logrocket-api-key
+
+# Alert Notifications
+ALERT_EMAIL_ENDPOINT=https://your-alert-email-endpoint
+SLACK_WEBHOOK_URL=https://hooks.slack.com/your-webhook-url
+
+# Security and Authentication
+JWT_SECRET=your-jwt-secret-key
+ENCRYPTION_KEY=your-encryption-key
 RECAPTCHA_SECRET_KEY=your-recaptcha-secret-key
 
-# Optional: Third-party Service Keys
-SENDGRID_API_KEY=your-sendgrid-api-key
+# SMS and Communication
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
 TWILIO_AUTH_TOKEN=your-twilio-auth-token
+WHATSAPP_BUSINESS_API_KEY=your-whatsapp-api-key
 
-# Development Settings
+# Application Configuration
 NODE_ENV=development
 DEBUG=true
+URL=https://midasthelifestyle.netlify.app
