--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "nodemailer": "^6.9.7",
+    "stripe": "^14.12.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
