--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "python3 -m http.server 8000"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "nodemailer": "^6.9.7",
     "stripe": "^14.12.0",
     "validator": "^13.11.0"
