feat: Implement Phase 2 - Real-Time Booking System Enhancement
🚀 Real-Time Availability Checking System:
- Built comprehensive availability service with conflict detection and buffer time management
- Implemented real-time inventory checking with database locks and transaction safety
- Created availability calendar API with booking and blackout period visualization
- Added temporary reservation system for secure checkout process (15-minute holds)
- Implemented multi-item availability checking for comparison features
- Added guest access for unauthenticated availability checking

📊 Booking Status Management Workflow:
- Created comprehensive booking status service with 10 validated status transitions
- Implemented automated status actions (emails, assignments, metrics updates)
- Built automated status scheduler with time-based triggers and reminders
- Added concierge assignment system based on location and workload
- Implemented customer metrics tracking (loyalty points, tier upgrades, lifetime value)
- Created automated refund processing with time-based policy calculations

📅 Calendar Synchronization Integration:
- Built Google Calendar integration service with two-way synchronization
- Implemented automatic calendar creation by item type (Cars, Yachts, Jets, Properties)
- Created booking event management (create, update, delete calendar events)
- Added blackout period calendar blocking for maintenance and unavailability
- Implemented external calendar conflict detection and prevention
- Built bulk synchronization capabilities for mass calendar updates

🔧 Enhanced Booking API Endpoints:
- Created comprehensive booking management API with complete CRUD operations
- Implemented advanced booking search with multi-criteria filtering and pagination
- Built customer booking history and personal booking management
- Added staff dashboard support for admin and concierge booking management
- Created booking analytics endpoints for business intelligence
- Implemented permissio

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,11 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
+# Google Calendar Integration
+GOOGLE_SERVICE_ACCOUNT_EMAIL=your-service-account@project.iam.gserviceaccount.com
+GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=your-service-account-private-key
+GOOGLE_SERVICE_ACCOUNT_CLIENT_ID=your-service-account-client-id
+
 # Email Services - Backup Providers
 SENDGRID_API_KEY=your-sendgrid-api-key
 MAILGUN_SMTP_USER=your-mailgun-smtp-user
