--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "."
-  command = "npm run build:production"
+  command = "node build.js"
   functions = "netlify/functions"
 
 [build.environment]
