--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,19 @@
 [build]
   publish = "."
-  command = "node build.js"
+  command = "node build.js && echo 'Force rebuild 2025-01-27'"
   functions = "netlify/functions"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate"
+    Pragma = "no-cache"
+    Expires = "0"
+
+[[headers]]
+  for = "*.css"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate"
 
 [build.environment]
   NODE_VERSION = "18"
