fix: FINAL aggressive styling deployment for luxury theme
✅ CRITICAL STYLING FIXES:
- Enhanced cache-busting with new version parameter
- Force luxury black/gold theme on ALL elements
- Override any default browser/framework styles
- Ensure headings display in gold (#D4AF37)
- Force button styling with luxury gradients
- Guarantee card styling with premium backgrounds

✅ DEPLOYMENT OPTIMIZATION:
- Updated netlify.toml build command for final deployment
- Enhanced cache-busting headers
- Force complete rebuild and asset refresh

✅ WASHINGTON DC FORMATTING:
- All instances corrected to 'Washington, DC' with proper comma
- Professional formatting maintained throughout

FINAL DEPLOYMENT - LUXURY STYLING GUARANTEED

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "."
-  command = "node build.js && echo 'Force rebuild 2025-01-27'"
+  command = "node build.js && echo 'FINAL LUXURY DEPLOYMENT 2025-01-27'"
   functions = "netlify/functions"
 
 [[headers]]
