--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,71 @@
 [build]
   publish = "."
-  command = "node build.js && echo 'FINAL LUXURY DEPLOYMENT 2025-01-27'"
+  command = "node build.js && echo 'CUSTOM DOMAIN DEPLOYMENT - midasthelifestyle.com'"
   functions = "netlify/functions"
 
+# Security and Performance Headers
 [[headers]]
   for = "/*"
   [headers.values]
-    Cache-Control = "no-cache, no-store, must-revalidate"
-    Pragma = "no-cache"
-    Expires = "0"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains"
+    Content-Security-Policy = "default-src 'self' 'unsafe-inline' 'unsafe-eval' https: data: blob:; img-src 'self' https: data: blob:; font-src 'self' https: data:;"
 
+# CSS Caching
 [[headers]]
   for = "*.css"
   [headers.values]
-    Cache-Control = "no-cache, no-store, must-revalidate"
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# JavaScript Caching
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Image Caching
+[[headers]]
+  for = "*.jpg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.png"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.webp"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Font Caching
+[[headers]]
+  for = "*.woff2"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Redirects for Custom Domain
+[[redirects]]
+  from = "https://www.midasthelifestyle.com/*"
+  to = "https://midasthelifestyle.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "http://midasthelifestyle.com/*"
+  to = "https://midasthelifestyle.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "http://www.midasthelifestyle.com/*"
+  to = "https://midasthelifestyle.com/:splat"
+  status = 301
+  force = true
 
 [build.environment]
   NODE_VERSION = "18"
