Netlify Project Configuration Update
🏗️ NETLIFY PROJECT INFORMATION
✅ Project Name: midasthelifestyle
✅ Owner: Midas Technical Solutions
✅ Project ID: 6c48e21f-64ff-433b-a130-811dc9cf4843
✅ Site URL: https://midasthelifestyle.netlify.app
✅ Custom Domain: https://midasthelifestyle.com (ready)

📋 CONFIGURATION UPDATES
✅ Updated netlify.toml with project information
✅ Enhanced package.json with Netlify configuration
✅ Updated README.md with project details
✅ Enhanced DEPLOYMENT.md with complete setup info
✅ Updated OAuth configuration with project data
✅ Created comprehensive project.json configuration

📊 PROJECT STATUS DASHBOARD
✅ Created PROJECT_STATUS.md with complete overview
✅ Deployment status and build configuration
✅ Feature implementation tracking (100% complete)
✅ Technical specifications and performance metrics
✅ Security implementation status
✅ Domain configuration instructions
✅ Mobile & PWA status overview
✅ Quality assurance and monitoring setup

🔧 TECHNICAL ENHANCEMENTS
✅ Enhanced path validator with project information
✅ Updated OAuth configuration with Netlify details
✅ Comprehensive project metadata
✅ Production-ready configuration
✅ Complete documentation suite

The project now has complete Netlify configuration and comprehensive status tracking for production deployment.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+# Netlify Project Configuration
+# Project Name: midasthelifestyle
+# Owner: Midas Technical Solutions
+# Project ID: 6c48e21f-64ff-433b-a130-811dc9cf4843
+# Site URL: midasthelifestyle.netlify.app
+# Custom Domain: midasthelifestyle.com
+
 [build]
   publish = "."
   command = "node build.js && echo 'CUSTOM DOMAIN DEPLOYMENT - midasthelifestyle.com'"
